# review_extractor

./: .gitignore  Dockerfile  Makefile  README.md  application.py  pyproject.toml
.github/workflows/: main.yml
scripts/: git_update.sh  local-deploy.sh  push_image.sh
src/review_extractor/: __init__.py  main.py  mongo_client.py  orchestrator.py
