[tool.poetry]
name = "review-extractor"
version = "0.0.8"
description = "review extractor"
authors = ["Michael Lasso <lassomicha@hotmail.com>"]

readme = "README.md"
packages = [
    {include = "review_extractor", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.29"
botocore = "^1.35.29"
aws-lambda-powertools = "^3.0.0"
python-dotenv = "^1.0.1"
openai = "1.40.1"
httpx = "0.27.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
