[tool.poetry]
name = "review-extractor"
version = "0.0.10"
description = "review extractor"
authors = ["Michael Lasso <lassomicha@hotmail.com>"]

readme = "README.md"
packages = [
    {include = "review_extractor", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.29"
botocore = "^1.35.29"
aws-lambda-powertools = "^3.0.0"
python-dotenv = "^1.0.1"
pymongo = "^4.8.0"
twelvelabs = "^0.4.10"
moviepy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
